Fix a spacing issue in the class creation/edit page, where the activity selection was too far down the page.

--- a/css/ri-itest.css
+++ b/css/ri-itest.css
@@ -447,7 +447,7 @@ select {
 
 .clear-both {
 	font-size: 1px;
-	clear: both;
+	clear: none;
 }
 
 
